<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.avmedia.simplenavigator.MapsActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayoutLiveData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_background"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/speed"
                android:textColor="#FFFF00"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/altitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/speed"
                android:text="@string/altitude"
                android:textColor="#FFFF00"
                android:textSize="20sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/resetTripButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/relativeLayoutTrip"
            android:layout_alignParentLeft="true"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:drawableLeft="@drawable/ic_refresh_24px"
            android:padding="10dp"
            android:text="Reset Trip"
            android:textColor="@color/colorWhite"
            android:clickable="true"
            android:textSize="16dp" />

        <ImageButton
            android:id="@+id/pauseResumeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/relativeLayoutTrip"
            android:layout_toRightOf="@id/resetTripButton"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:padding="10dp"
            android:tint="@color/colorWhite"
            android:src="@drawable/ic_pause_circle_outline_24px" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:drawableLeft="@drawable/ic_exit_to_app_24px"
            android:padding="10dp"
            android:text="Exit"
            android:textColor="@color/colorWhite"
            android:textSize="16dp" />

        <RelativeLayout
            android:id="@+id/relativeLayoutTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/layout_background"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/distance"
                android:textColor="#FFFF00"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/topSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/distance"
                android:text="@string/topSpeed"
                android:textColor="#FFFF00"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ascent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/topSpeed"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/ascent"
                android:textColor="#FFFF00"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/descent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ascent"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/descent"
                android:textColor="#FFFF00"
                android:textSize="20sp" />

        </RelativeLayout>
    </RelativeLayout>
</fragment>